# badge-fw

./: Cargo.toml  build.rs  flake.nix  memory.x  openocd.cfg  program.sh
.cargo/: config
src/: bit_expand.rs  main.rs
